# rust-sdk

./: .gitignore  Cargo.toml  Makefile  build.rs
src/nitric/proto/: nitric.proto.apis.v1.rs  nitric.proto.deployments.v1.rs  nitric.proto.http.v1.rs  nitric.proto.key_value.v1.rs  nitric.proto.queues.v1.rs  nitric.proto.resources.v1.rs  nitric.proto.schedules.v1.rs  nitric.proto.secrets.v1.rs  nitric.proto.storage.v1.rs  nitric.proto.topics.v1.rs  nitric.proto.websockets.v1.rs
